--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -17,6 +17,11 @@
     "mongoose": "^6.2.4"
   },
   "devDependencies": {
+    "eslint": "^8.10.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
