--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "mongoose-unique-validator": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.10.0",
