--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -1,9 +1,13 @@
 {
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node --require dotenv/config index.js"
   },
   "dependencies": {
     "apollo-server": "^3.7.0",
-    "graphql": "^16.5.0"
-  }
+    "dotenv": "^16.0.1",
+    "graphql": "^16.5.0",
+    "mongoose": "^6.3.4",
+    "mongoose-unique-validator": "^3.0.0"
+  },
+  "type": "module"
 }
