--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -6,6 +6,7 @@
     "apollo-server": "^3.7.0",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "mongoose-unique-validator": "^3.0.0"
   },
