--- a/part13/part13-blogs/package.json
+++ b/part13/part13-blogs/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
