--- a/part13/part13-blogs/package.json
+++ b/part13/part13-blogs/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.20.1",
+    "umzug": "^3.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
